projects/full-stack_chatApp/k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend

  # pod.yml config
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: chauhan0799/chatapp-frontend:latest
          ports:
            - containerPort: 80
