projects/full-stack_chatApp/k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5001  #user's port [outer world]
    targetPort: 5001 #pod's port [pod's inside cluster]
  type: ClusterIP
